--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <h1>Social Media Button Hover Effect</h1>
   <ul>
     <li><a href=""><i class="fa fa-facebook"></i></a></li>
-    <li><a href="https://www.instagram.com/lyn.chry/"><i class="fa fa-instagram"></i></a></li>    
+    <li><a href="https://www.instagram.com/[url]"><i class="fa fa-instagram"></i></a></li>    
   </ul>
 </div>
 <main>
